k8s/traefik/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-whep-0
  namespace: superstreaming
spec:
  stripPrefix:
    prefixes:
      - /whep/0
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-whep-1
  namespace: superstreaming
spec:
  stripPrefix:
    prefixes:
      - /whep/1
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-whep-2
  namespace: superstreaming
spec:
  stripPrefix:
    prefixes:
      - /whep/2
